# LinFusion

./: pyproject.toml
src/linfusion/: linfusion.py
