[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linfusion"
version = "0.1.0"
description = "A package for linear fusion operations"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "diffusers>=0.21.0",
    "accelerate>=0.23.0",
    "opencv-python>=4.8.0",
    "datasets>=2.14.0",
    "Pillow>=10.0.0",
    "transformers>=4.33.0",
]

[project.urls]
Repository = "https://github.com/yourusername/LinFusion"
Documentation = "https://github.com/yourusername/LinFusion#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/linfusion"]
