[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linfusion"
version = "0.1.0"
description = "A package for linear fusion operations"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "diffusers",
    "accelerate",
    "opencv-python",
    "datasets",
    "Pillow",
    "transformers",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linfusion", "src/pipelines", "src/eval", "src/distrifuser", "src/train"]
